--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quemvai",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nenitf.github.io/quemvai",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,9 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "grommet": "^2.17.3",
+    "grommet-icons": "^4.6.0",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
